--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title> hello coursera</title>
 </head>
 <body>
-	<h1>hello Coursera</h1>
+	<h1><b><i>hello Coursera</i></b></h1>
 </body>
 </html>
  
